Ajout de la instagram card et des prix/durée sur les prestations

--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,13 @@
      <meta property="og:url" content="https://damien-cuvillier.github.io/Taib-massages/" />
      <meta property="og:image" content="https://damien-cuvillier.github.io/Taib-massages/images/og-image.jpg" />
      
-     <!-- Twitter Cards -->
-     <meta name="twitter:card" content="summary_large_image" />
-     <meta name="twitter:title" content="Taib-massages - Centre de bien-être" />
-     <meta name="twitter:description" content="Masseur de bien-être spécialisé en massages et cours de Pilates à Saint-Étienne. Réservez votre séance en ligne." />
-     <meta name="twitter:image" content="https://damien-cuvillier.github.io/Taib-massages/images/og-image.jpg" />
+     <!-- Instagram -->
+    <meta property="instagram:title" content="Taib-massages - Spécialiste de bien-être" />
+    <meta property="instagram:description" content="Masseur de bien-être spécialisé en massages et cours de Pilates à Paris 18e. Réservez votre séance en ligne." />
+    <meta property="instagram:image" content="https://damien-cuvillier.github.io/Taib-massages/images/og-image.jpg" />
+    <meta property="instagram:image:width" content="1080" />
+    <meta property="instagram:image:height" content="1080" />
+    <meta property="instagram:creator" content="@taib_massages" />
      
     <title>Taib-massages</title>
   </head>
