Indexation du site

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon">   
+    <meta name="google-site-verification" content="G_kesmK2o2RcSNZ6sctex9AdgUmfz9oFRMNMzSBdFjM" />
      <!-- SEO -->
      <meta name="description" content="Taib, masseur de bien-être spécialisé en massages, pierres chaudes, ventouses, réflexologie et cours de Pilates à Paris 18e. Réservez votre séance en ligne." />
      <meta name="keywords" content="taib, taib-massages, massage, massages, pilates, pilates mat, bien-être, Paris, 18e, Paris 18e, pierres chaudes, réflexologie, réflexologie plantaire, ventouses, ventouses sèches, cours de pilates, relaxation" />
