--- a/public/index.html
+++ b/public/index.html
@@ -3,18 +3,22 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Taib-massages - Spécialiste de bien-être à Paris 18e</title>
     <meta name="theme-color" content="#000000" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/favicon.svg" />
     <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon-96x96.png" sizes="96x96" />
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
     <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon">   
     <meta name="google-site-verification" content="G_kesmK2o2RcSNZ6sctex9AdgUmfz9oFRMNMzSBdFjM" />
     <meta name="msvalidate.01" content="923960FB29FB6F04A52FD9D8721A3566" />
+    <meta name="apple-mobile-web-app-title" content="Taib-massages" />
      <!-- SEO -->
      <meta name="description" content="Taib, masseur de bien-être spécialisé en massages, pierres chaudes, ventouses, réflexologie et cours de Pilates à Paris 18e. Réservez votre séance en ligne." />
      <meta name="keywords" content="taib, taib-massages, massage, massages, pilates, pilates mat, bien-être, Paris, 18e, Paris 18e, pierres chaudes, réflexologie, réflexologie plantaire, ventouses, ventouses sèches, cours de pilates, relaxation" />
@@ -57,7 +61,7 @@
     <meta property="instagram:image:height" content="1080" />
     <meta property="instagram:creator" content="@taib_massages" />
      
-    <title>Taib-massages</title>
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
