--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Taib-massages - Spécialiste de bien-être à Paris 18e</title>
+    <base href="/Accueil/">
     <meta name="theme-color" content="#000000" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -40,15 +41,15 @@
           "postalCode": "75018"
         },
         "telephone": "+33682 64 64 77",
-        "url": "https://damien-cuvillier.github.io/Taib-massages/"
+        "url": "https://Taib-massages.github.io/Accueil/"
       }
     </script>
-     
+    
      <!-- Open Graph -->
      <meta property="og:title" content="Taib-massages - Spécialiste de bien-être" />
      <meta property="og:description" content="Taib, masseur de bien-être spécialisé en massages, pierres chaudes, ventouses, réflexologie et cours de Pilates à Paris 18e. Réservez votre séance en ligne." />
      <meta property="og:type" content="website" />
-     <meta property="og:url" content="https://damien-cuvillier.github.io/Taib-massages/" />
+     <meta property="og:url" content="https://Taib-massages.github.io/Accueil/" />
      <meta property="og:image" content="%PUBLIC_URL%/images/og-image.png" />
      <meta property="og:image:width" content="1200" />
      <meta property="og:image:height" content="630" />
@@ -56,7 +57,7 @@
      <!-- Instagram -->
     <meta property="instagram:title" content="Taib-massages - Spécialiste de bien-être" />
     <meta property="instagram:description" content="Taib, masseur de bien-être spécialisé en massages, pierres chaudes, ventouses, réflexologie et cours de Pilates à Paris 18e. Réservez votre séance en ligne." />
-    <meta property="instagram:image" content="https://damien-cuvillier.github.io/Taib-massages/images/og-image.png" />
+    <meta property="instagram:image" content="https://Taib-massages.github.io/Accueil/images/og-image.png" />
     <meta property="instagram:image:width" content="1080" />
     <meta property="instagram:image:height" content="1080" />
     <meta property="instagram:creator" content="@taib_massages" />
