Ajout schema.org Organization

--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,8 @@
         "@context": "https://schema.org",
         "@type": "LocalBusiness",
         "name": "Taib-massages",
-        "image": "https://Taib-massages.github.io/Accueil/images/Logo.webp",
-        "logo": "https://Taib-massages.github.io/Accueil/images/Logo.webp",
+        "image": "https://Taib-massages.github.io/Accueil/images/logoheader.webp",
+        "logo": "https://Taib-massages.github.io/Accueil/images/logogoogle.png",
         "description": "Spécialiste de bien-être spécialisé en massages et cours de Pilates à Paris 18e.",
         "address": {
           "@type": "PostalAddress",
@@ -43,7 +43,17 @@
         "url": "https://Taib-massages.github.io/Accueil/"
       }
     </script>
-    
+    <!-- Schema.org Organization -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Taib-massages",
+        "url": "https://taib-massages.github.io/Accueil/",
+        "logo": "https://taib-massages.github.io/Accueil/images/logogoogle.png"
+      }
+      </script>
+      
     <!-- Open Graph -->
     <meta property="og:title" content="Taib-massages - Spécialiste de bien-être" />
     <meta property="og:description" content="Taib, masseur de bien-être spécialisé en massages, pierres chaudes, ventouses, réflexologie et cours de Pilates à Paris 18e. Réservez votre séance en ligne." />
