Ajout du robots.txt et balise meta robots

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
     <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon"> 
-    
+    <meta name="robots" content="noindex, nofollow">
+
     
     <!-- SEO -->
     <meta name="description" content="taib, masseur de bien-être spécialisé en massages, pierres chaudes, ventouses, réflexologie et cours de Pilates à Paris 18e. Réservez votre séance en ligne." />
