Changement des chemins des favicon

--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Taib-massages - Spécialiste de bien-être à Paris 18e</title>
     <meta name="theme-color" content="#000000" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" /> 
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" /> 
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"> 
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"> 
-    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" /> 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"> 
-    <link rel="manifest" href="/site.webmanifest"> 
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"> 
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/x-icon" href="/Accueil/favicon.ico" /> 
+    <link rel="icon" type="image/svg+xml" href="/Accueil/favicon.svg" /> 
+    <link rel="icon" type="image/png" sizes="32x32" href="/Accueil/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/Accueil/favicon-16x16.png">
+    <link rel="icon" type="image/png" href="/Accueil/favicon-96x96.png" sizes="96x96" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/Accueil/apple-touch-icon.png">
+    <link rel="manifest" href="/Accueil/site.webmanifest">
+    <link rel="shortcut icon" href="/Accueil/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/Accueil/favicon.ico" type="image/x-icon">
     <!-- SEO -->
     <meta name="description" content="taib, masseur de bien-être spécialisé en massages, pierres chaudes, ventouses, réflexologie et cours de Pilates à Paris 18e. Réservez votre séance en ligne." />
     <meta name="keywords" content="taib, taib-massages, massage, massages, pilates, pilates mat, bien-être, Paris, 18e, Paris 18e, pierres chaudes, réflexologie, réflexologie plantaire, ventouses, ventouses sèches, cours de pilates, relaxation" />
