--- a/public/index.html
+++ b/public/index.html
@@ -58,9 +58,9 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://taib-massages.github.io/Accueil/" />
     <meta property="og:image" content="https://taib-massages.github.io/Accueil/images/logo-taib-massages.png" />
-    <meta property="og:image:width" content="512" />
-    <meta property="og:image:height" content="512" />
-    <meta property="og:image:type" content="image/webp" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="1200" />
+    <meta property="og:image:type" content="image/png" />
     
     <!-- Google Rich Snippets -->
     <meta itemprop="name" content="Taib-massages - Spécialiste de bien-être">
